Update movie comments scraping

--- a/day1_scraping/day1_scrap_navermovie.ipynb
+++ b/day1_scraping/day1_scrap_navermovie.ipynb
@@ -8,17 +8,41 @@
     "\n",
     "requests 패키지는 url 주소의 정보를 가져옵니다. 여기에는 headers 나 cookies 와 같은 정보도 포함되어 있습니다. 우리가 웹 브라우저로 보는 HTML 코드는 text 에 저장되어 있습니다.\n",
     "\n",
-    "HTML 은 XML 로 구조화된 텍스트입니다. 그렇기 때문에 XML parser 를 이용하면 문서의 각 부분을 손쉽게 접근할 수 있습니다. BeautifulSoup 은 이를 도와주는 패키지 입니다."
+    "HTML 은 XML 로 구조화된 텍스트입니다. 그렇기 때문에 XML parser 를 이용하면 문서의 각 부분을 손쉽게 접근할 수 있습니다. BeautifulSoup 은 이를 도와주는 패키지 입니다. 현재 최신 버전은 4.7.1 이며, 4.6.x 에서 4.7.x 로 넘어오면서 바뀐 문법이 있습니다. 반드시 버전을 확인하시기 바랍니다. 이전 버전일 경우에 pip 을 이용하여 업그레이드 할 수 있습니다.\n",
+    "\n",
+    "```\n",
+    "pip install --upgrade beautifulsoup4\n",
+    "pip install beautifulsoup4==4.7.1\n",
+    "```"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.7.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "import bs4\n",
+    "from bs4 import BeautifulSoup\n",
+    "\n",
+    "print(bs4.__version__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import requests\n",
-    "from bs4 import BeautifulSoup\n",
     "\n",
     "# 영화 라라랜드 (배우, 제작진)\n",
     "url = 'https://movie.naver.com/movie/bi/mi/detail.nhn?code=134963'\n",
@@ -27,14 +51,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Pragma': 'no-cache', 'Expires': 'Thu, 01 Jan 1970 00:00:00 GMT', 'Cache-Control': 'no-cache, no-store', 'Content-Language': 'ko-KR', 'P3P': 'CP=\"ALL CURa ADMa DEVa TAIa OUR BUS IND PHY ONL UNI PUR FIN COM NAV INT DEM CNT STA POL HEA PRE LOC OTC\", CP=\"ALL CURa ADMa DEVa TAIa OUR BUS IND PHY ONL UNI PUR FIN COM NAV INT DEM CNT STA POL HEA PRE LOC OTC\"', 'Vary': 'Accept-Encoding', 'Content-Encoding': 'gzip', 'Content-Type': 'text/html;charset=UTF-8', 'Content-Length': '29759', 'Accept-Ranges': 'bytes', 'Date': 'Thu, 18 Apr 2019 08:40:49 GMT', 'X-Varnish': '3695893113', 'Age': '0', 'Via': '1.1 varnish', 'X-Varnish-Cache': 'MISS', 'Referrer-Policy': 'unsafe-url', 'Server': 'nfront'}\n",
+      "{'Pragma': 'no-cache', 'Expires': 'Thu, 01 Jan 1970 00:00:00 GMT', 'Cache-Control': 'no-cache, no-store', 'Content-Language': 'ko-KR', 'P3P': 'CP=\"ALL CURa ADMa DEVa TAIa OUR BUS IND PHY ONL UNI PUR FIN COM NAV INT DEM CNT STA POL HEA PRE LOC OTC\", CP=\"ALL CURa ADMa DEVa TAIa OUR BUS IND PHY ONL UNI PUR FIN COM NAV INT DEM CNT STA POL HEA PRE LOC OTC\"', 'Vary': 'Accept-Encoding', 'Content-Encoding': 'gzip', 'Content-Type': 'text/html;charset=UTF-8', 'Content-Length': '29292', 'Accept-Ranges': 'bytes', 'Date': 'Thu, 18 Apr 2019 10:21:00 GMT', 'X-Varnish': '2355606663 2355605989', 'Age': '12', 'Via': '1.1 varnish', 'X-Varnish-Cache': 'HIT', 'Referrer-Policy': 'unsafe-url', 'Server': 'nfront'}\n",
       "\n",
       "<RequestsCookieJar[]>\n"
      ]
@@ -54,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +191,7 @@
        "'La La Land, 2016'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +232,7 @@
        "11"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,12 +247,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`href^=AAA` 는 AAA 로 href 의 값이 시작하는 경우를 의미합니다. 이처럼 BeautifulSoup 은 다양한 문법을 제공합니다. 이들을 확인하려면 [cookbook](https://beautiful-soup-4.readthedocs.io/en/latest/) 을 보시기 바랍니다."
+    "`href^=AAA` 는 AAA 로 href 의 값이 시작하는 경우를 의미합니다. 이처럼 BeautifulSoup 은 다양한 문법을 제공합니다. 이들을 확인하려면 [cookbook](https://beautiful-soup-4.readthedocs.io/en/latest/) 을 보시기 바랍니다.\n",
+    "\n",
+    "**참고**\n",
+    "\n",
+    "BeautifulSoup <= 4.6.1 에서는 href 에 아래처럼 값을 입력하여도 파싱이 되었습니다.\n",
+    "\n",
+    "```python\n",
+    "actor_items[0].select('a[href^=/movie/bi/pi/basic.nhn?code=]')\n",
+    "```\n",
+    "\n",
+    "하지만 4.7.1 부터는 반드시 `\"` 을 이용하여 href 의 값을 감싸야 작동합니다."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -237,13 +271,13 @@
        "[<a class=\"k_name\" href=\"/movie/bi/pi/basic.nhn?code=5751\" title=\"라이언 고슬링\">라이언 고슬링</a>]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "actor_items[0].select('a[href^=/movie/bi/pi/basic.nhn?code=]')"
+    "actor_items[0].select('a[href^=\"/movie/bi/pi/basic.nhn?code=\"]')"
    ]
   },
   {
@@ -257,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +315,7 @@
    "source": [
     "def parse_actor(item):\n",
     "    try:\n",
-    "        name = normalize(item.select('a[href^=/movie/bi/pi/basic.nhn?code=]')[0].text)\n",
+    "        name = normalize(item.select('a[href^=\"/movie/bi/pi/basic.nhn?code=\"]')[0].text)\n",
     "    except:\n",
     "        name = ''\n",
     "    \n",
@@ -305,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +396,7 @@
        " {'name': '제이슨 푸치스', 'role': '카를로 역', 'order': 11}]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -392,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +447,7 @@
        "  {'name': '제이슨 푸치스', 'role': '카를로 역', 'order': 11}]}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -439,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,17 +494,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "created ./scraped_movies/\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import json\n",
     "\n",
@@ -500,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -529,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -560,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +605,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-17-2bc99b445c38>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0ms\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mi\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;36m3\u001b[0m \u001b[0;32melse\u001b[0m \u001b[0;34m'a%d'\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0mj\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m's = %s, j = %d'\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mj\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-18-2bc99b445c38>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0ms\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mi\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;36m3\u001b[0m \u001b[0;32melse\u001b[0m \u001b[0;34m'a%d'\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0mj\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m's = %s, j = %d'\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mj\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: 'a3'"
      ]
     }
@@ -600,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -635,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -669,9 +695,217 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## 영화평 가져오기\n",
+    "\n",
+    "영화평 페이지에 마우스를 올린 다음에, 링크 복사를 하면 아래와 같은 url 을 얻을 수 있습니다. 우리는 이 페이지에서도 댓글을 파싱하는 함수를 만들어 봅니다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'https://movie.naver.com/movie/bi/mi/pointWriteFormList.nhn?code=134963&type=after&isActualPointWriteExecute=false&isMileageSubscriptionAlready=false&isMileageSubscriptionReject=false&page=2'"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "url = 'https://movie.naver.com/movie/bi/mi/pointWriteFormList.nhn?code=134963&type=after&isActualPointWriteExecute=false&isMileageSubscriptionAlready=false&isMileageSubscriptionReject=false&page=2'\n",
+    "url"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def parse_comments_from_a_page(url):\n",
+    "    soup = get_soup(url)\n",
+    "    comment_items = soup.select('div[class=score_result] li')\n",
+    "    comments = [parse_comment_item(item) for item in comment_items]\n",
+    "    return comments\n",
+    "\n",
+    "def parse_comment_item(item):\n",
+    "    return {\n",
+    "        'score': int(item.select('div[class=star_score]')[0].text),\n",
+    "        'text': normalize(item.select('div[class=score_reple] p')[0].text)\n",
+    "    }\n",
+    "\n",
+    "comments = parse_comments_from_a_page(url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'score': 10,\n",
+       "  'text': '이 영화의 백미는 마지막 부분에 남녀 주인공들의 IF 장면들... 이렇게 되지 못한 결말을 맞지만 그래도 서로의 꿈을 이루고 인정하는 듯한 둘만의 미소,,,, 뭔가 가슴 찡했다...'},\n",
+       " {'score': 10,\n",
+       "  'text': '위플래시가 음악에 대한 광기라면 이 영화는 열정이다. 같은날 개봉되는 삼류 국산영화는 범접조차 할수 없다'},\n",
+       " {'score': 7, 'text': '관람객슬프기 짝이 없는 상상.'},\n",
+       " {'score': 9,\n",
+       "  'text': '관람객아이러니컬하게도, 꿈이라는 건 이루고 난 뒤보다 이루기 전까지가 실은 가장 행복했다는 걸, 이루고 난 뒤에야 깨닫는다는 인생의 진실을 가슴 아프게 그리고 아름답게 보여주는 영화'},\n",
+       " {'score': 10,\n",
+       "  'text': '다미엔 차젤레 감독은 관객에게 황홀한 마법을 걸었다. 재즈에 대한 애정을 담아 연출했고 꿈 꾸는 모든 이들을 위한 영화. 롱테이크 오프닝 시퀀스, OST부터 이미 매료되었고 엔딩까지 한 편의 동화 같은 현실 이야기. 라이언 고슬링 눈빛이 여운을 남긴다'},\n",
+       " {'score': 10, 'text': '관람객서로의 꿈을 돌보아주고 키워가며 각자의 길을 응원하는 최고의 뮤지컬.'},\n",
+       " {'score': 10, 'text': '관람객왤케눈물이나오는지..ㅠㅠ'},\n",
+       " {'score': 8, 'text': '관람객다시 돌아간다면 지금과 달랐을까?'},\n",
+       " {'score': 10, 'text': '관람객영화 시작부터 깜짝놀랐다. 지금까지 본 음악영화 중에서 최고다.'},\n",
+       " {'score': 10,\n",
+       "  'text': '시간이 지나도 우리가 함께 꿈꾸었다는 사실은 변하지 않을 것이다. 그것이 비록 서로 다른 꿈이었을지라도...'}]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "comments"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "영화평 url 을 살펴보면 구조가 있습니다.  page 는 페이지 번호이며, type=after 는 관람후 평점을 의미합니다. 이 정보를 바탕으로 url_base 를 만든 뒤, 페이지를 증가시키며 댓글을 수집하는 함수를 만듭니다. 여러 번 url get 을 할 경우에는 반드시 sleep 을 하는 것이 좋습니다. 그렇지 않으면 공격성 접근으로 차단 당할 수 있습니다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "scraped comments from id=134963, page=1 / 10\n",
+      "scraped comments from id=134963, page=2 / 10\n",
+      "scraped comments from id=134963, page=3 / 10\n",
+      "scraped comments from id=134963, page=4 / 10\n",
+      "scraped comments from id=134963, page=5 / 10\n",
+      "scraped comments from id=134963, page=6 / 10\n",
+      "scraped comments from id=134963, page=7 / 10\n",
+      "scraped comments from id=134963, page=8 / 10\n",
+      "scraped comments from id=134963, page=9 / 10\n",
+      "scraped comments from id=134963, page=10 / 10\n"
+     ]
+    }
+   ],
+   "source": [
+    "comment_url_base = 'https://movie.naver.com/movie/bi/mi/pointWriteFormList.nhn?code={}&type=after&isActualPointWriteExecute=false&isMileageSubscriptionAlready=false&isMileageSubscriptionReject=false&page={}'\n",
+    "\n",
+    "def parse_comments(idx, max_page=10, sleep=1.0, verbose=True):\n",
+    "    comments = []\n",
+    "    for page in range(1, max_page + 1):\n",
+    "        url = comment_url_base.format(idx, page)\n",
+    "        comments += parse_comments_from_a_page(url)\n",
+    "        if verbose:\n",
+    "            print('scraped comments from id={}, page={} / {}'.format(idx, page, max_page))\n",
+    "        time.sleep(sleep)\n",
+    "    return comments\n",
+    "\n",
+    "comments = parse_comments(134963)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "100"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(comments)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'score': 9, 'text': \"'그래도 우리 잘 해냈지?'라고 말하는 듯한 마지막 눈빛교환이 잊혀지질 않는다\"},\n",
+       " {'score': 9,\n",
+       "  'text': '와..그냥 감탄밖엔 안 나온다. 영상미며 음악이며..조폭, 건달, 검사, 신파 좋아하고 실험을 꺼리는 한국의 기성 영화인들 반성해라. 이제 겨우 두 편 만든 신인감독이 이 정도다'},\n",
+       " {'score': 7, 'text': '처음 들을때는 몰랐다 이 음악이 슬퍼질거란걸'}]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "comments[:3]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## headers (user-agent)\n",
+    "\n",
+    "그런데 어떤 사이트들은 웹브라우저가 아닌 접근을 허용하지 않는 경우들도 있습니다. IMDB 사이트가 그러합니다. 이때는 requests 를 보낼 때, 나는 공격성 접근이 아니라는 정보를 함께 전달해야 합니다. 이 정보는 headers 에 입력합니다. 그래서 앞서 get_soup 함수가 아래처럼 구현되었던 것입니다.\n",
+    "\n",
+    "```python\n",
+    "requests.get(url, headers=headers)\n",
+    "```\n",
+    "\n",
+    "headers 를 이용할 때에는 아래처럼 get_soup 함수에 headers 를 입력합니다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "headers = {'User-Agent': 'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_10_1) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/39.0.2171.95 Safari/537.36'}\n",
+    "soup = get_soup(url, headers)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "네이버 영화의 메타 데이터 및 댓글을 수집하는 스크래핑 코드는 아래의 repository 에 공개하였습니다.\n",
     "\n",
-    "- [https://github.com/lovit/naver_movie_scraper](https://github.com/lovit/naver_movie_scraper)"
+    "- [https://github.com/lovit/naver_movie_scraper](https://github.com/lovit/naver_movie_scraper)\n",
+    "\n",
+    "네이버 뉴스 기사를 검색하여, 해당 기사의 본문과 댓글을 수집하는 스크래핑 코드도 아래의 repository 에 공개하였습니다.\n",
+    "\n",
+    "- [https://github.com/lovit/naver_news_search_scraper](https://github.com/lovit/naver_news_search_scraper)\n",
+    "\n",
+    "IMDB scraper 도 아래의 repository 에 공개하였습니다.\n",
+    "\n",
+    "- [https://github.com/lovit/imdb_scraper](https://github.com/lovit/imdb_scraper)"
    ]
   },
   {
