Update Lasso vs XGBoost performance comparison

--- a/day2_classifiers/day2_xgboost_classifier.ipynb
+++ b/day2_classifiers/day2_xgboost_classifier.ipynb
@@ -241,6 +241,45 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "같은 데이터에 대하여 L1 regularization + logistic regression 을 학습한 결과 입니다. XGBoost 와 비슷한 성능을 확인할 수 있습니다.\n",
+    "\n",
+    "```python\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "\n",
+    "# for each cost\n",
+    "for cost in [100, 10, 1]:\n",
+    "\n",
+    "    x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.1, random_state=42)\n",
+    "\n",
+    "    # build lasso regression\n",
+    "    logistic_regression = LogisticRegression(\n",
+    "        penalty='l1', C=cost)\n",
+    "    \n",
+    "    logistic_regression.fit(x_train, y_train)\n",
+    "    y_train_pred = logistic_regression.predict(x_train)\n",
+    "    train_acc = np.where(y_train_pred == y_train)[0].shape[0]\n",
+    "    train_acc /= y_train.shape[0]\n",
+    "\n",
+    "    y_test_pred = logistic_regression.predict(x_test)\n",
+    "    test_acc = np.where(y_test_pred == y_test)[0].shape[0]\n",
+    "    test_acc /= y_test.shape[0]\n",
+    "\n",
+    "    print('L1 lambda = {}, training accuracy = {}, test accoracy = {}'.format(1/cost, train_acc, test_acc))\n",
+    "```\n",
+    "\n",
+    "```\n",
+    "L1 lambda = 0.01, training accuracy = 0.905139127734232, test accoracy = 0.8806057319260774\n",
+    "L1 lambda = 0.1, training accuracy = 0.905064963358163, test accoracy = 0.8820658295440323\n",
+    "L1 lambda = 1.0, training accuracy = 0.8995536231615346, test accoracy = 0.8841099662091694\n",
+    "```"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
