--- a/day3_embedding_and_visualizing/day3_a_explicit_word_representation_(pmi_svd).ipynb
+++ b/day3_embedding_and_visualizing/day3_a_explicit_word_representation_(pmi_svd).ipynb
@@ -16,7 +16,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "soynlp=0.0.492\n",
+      "soynlp=0.0.491\n",
       "added lovit_textmining_dataset\n"
      ]
     }
@@ -54,16 +54,16 @@
       "[Noun Extractor] use default predictors\n",
       "[Noun Extractor] num features: pos=1260, neg=1173, common=12\n",
       "[Noun Extractor] counting eojeols\n",
-      "[EojeolCounter] n eojeol = 687560 from 228630 sents. mem=0.194 Gb                    \n",
+      "[EojeolCounter] n eojeol = 687560 from 228630 sents. mem=0.181 Gb                    \n",
       "[Noun Extractor] complete eojeol counter -> lr graph\n",
-      "[Noun Extractor] has been trained. #eojeols=2775027, mem=1.667 Gb\n",
+      "[Noun Extractor] has been trained. #eojeols=2775027, mem=1.653 Gb\n",
       "[Noun Extractor] batch prediction was completed for 244896 words\n",
       "[Noun Extractor] checked compounds. discovered 183564 compounds\n",
       "[Noun Extractor] postprocessing detaching_features : 211088 -> 159349\n",
       "[Noun Extractor] postprocessing ignore_features : 159349 -> 159153\n",
       "[Noun Extractor] postprocessing ignore_NJ : 159153 -> 157566\n",
       "[Noun Extractor] 157566 nouns (183564 compounds) with min frequency=1\n",
-      "[Noun Extractor] flushing was done. mem=2.020 Gb                    \n",
+      "[Noun Extractor] flushing was done. mem=2.006 Gb                    \n",
       "[Noun Extractor] 74.53 % eojeols are covered\n"
      ]
     },
@@ -107,8 +107,8 @@
      "output_type": "stream",
      "text": [
       "Create (word, contexts) matrix\n",
-      "  - counting word frequency from 228629 sents, mem=2.170 Gb\n",
-      "  - scanning (word, context) pairs from 228629 sents, mem=2.170 Gb\n",
+      "  - counting word frequency from 228629 sents, mem=2.157 Gb\n",
+      "  - scanning (word, context) pairs from 228629 sents, mem=2.157 Gb\n",
       "  - (word, context) matrix was constructed. shape = (30810, 30810)                    \n",
       "  - done\n"
      ]
@@ -179,8 +179,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1299\n",
-      "1884\n"
+      "1302\n",
+      "1889\n"
      ]
     }
    ],
@@ -205,7 +205,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -327,7 +329,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from soynlp.word import pmi\n",
@@ -421,7 +425,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from sklearn.decomposition import TruncatedSVD\n",
@@ -445,16 +451,16 @@
     {
      "data": {
       "text/plain": [
-       "[('트와이스', 0.8202300777197117),\n",
-       " ('블랙핑크', 0.8022969313769159),\n",
-       " ('블핑', 0.7676123740349043),\n",
-       " ('엑소', 0.7601521956561194),\n",
-       " ('빅뱅', 0.749706188370749),\n",
-       " ('여자친구', 0.734047613460312),\n",
-       " ('트와', 0.7290810093932568),\n",
-       " ('ioi', 0.7280844947716353),\n",
-       " ('컴백', 0.70224942839667),\n",
-       " ('방탄', 0.6939720969659833)]"
+       "[('블랙핑크', 0.8162061296682889),\n",
+       " ('트와이스', 0.7910113638539613),\n",
+       " ('블핑', 0.7679792737583678),\n",
+       " ('빅뱅', 0.7438666999604329),\n",
+       " ('여자친구', 0.7364958945398206),\n",
+       " ('트와', 0.7304367399302416),\n",
+       " ('엑소', 0.7201511797130391),\n",
+       " ('ioi', 0.6927218648856788),\n",
+       " ('아오아', 0.6839129116900139),\n",
+       " ('음원', 0.6790602896134313)]"
       ]
      },
      "execution_count": 13,
@@ -474,16 +480,16 @@
     {
      "data": {
       "text/plain": [
-       "[('유투브', 0.5057558018677003),\n",
-       " ('유튜브', 0.4694564970299555),\n",
-       " ('TV', 0.4394723181810942),\n",
-       " ('tv', 0.4358611339101266),\n",
-       " ('티비', 0.43468147706743654),\n",
-       " ('공중파', 0.42889066413713084),\n",
-       " ('bj', 0.41709125200736097),\n",
-       " ('방송사', 0.4119531023226891),\n",
-       " ('화질', 0.41150431548359423),\n",
-       " ('후진국', 0.4105644098193276)]"
+       "[('유투브', 0.4844562611869139),\n",
+       " ('tv', 0.46934051763480533),\n",
+       " ('유튜브', 0.46592377270677743),\n",
+       " ('티비', 0.44565890069529057),\n",
+       " ('jtbc', 0.4327772253591923),\n",
+       " ('TV', 0.4307487376379975),\n",
+       " ('유럽', 0.42981356172467744),\n",
+       " ('광고', 0.42824023679660894),\n",
+       " ('채널', 0.4273553543926909),\n",
+       " ('이슬람', 0.42663675730599715)]"
       ]
      },
      "execution_count": 14,
@@ -496,16 +502,112 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## S, Sigma, V 를 이용하여 representation 과 mapper 만들기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.utils import check_random_state\n",
+    "from sklearn.utils.extmath import randomized_svd\n",
+    "\n",
+    "def train(X, n_components, n_iter=5, random_state=None):\n",
+    "\n",
+    "    if (random_state == None) or isinstance(random_state, int):\n",
+    "        random_state = check_random_state(random_state)\n",
+    "\n",
+    "    n_features = X.shape[1]\n",
+    "\n",
+    "    if n_components >= n_features:\n",
+    "        raise ValueError(\"n_components must be < n_features;\"\n",
+    "                         \" got %d >= %d\" % (n_components, n_features))\n",
+    "\n",
+    "    U, Sigma, VT = randomized_svd(\n",
+    "        X, n_components,\n",
+    "        n_iter = n_iter,\n",
+    "        random_state = random_state)\n",
+    "\n",
+    "    S_ = Sigma ** (0.5)\n",
+    "    representation = y = U * S_\n",
+    "    mapper = (VT.T * S_).T\n",
+    "\n",
+    "    return representation, mapper\n",
+    "\n",
+    "wv, mapper = train(x_pmi, n_components=300)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('블랙핑크', 0.7502299094221191),\n",
+       " ('트와이스', 0.7484624801094757),\n",
+       " ('블핑', 0.707471995322307),\n",
+       " ('트와', 0.6661149639890701),\n",
+       " ('ioi', 0.648183439924753),\n",
+       " ('여자친구', 0.6457042531915209),\n",
+       " ('엑소', 0.6432528443193453),\n",
+       " ('빅뱅', 0.6415343264212899),\n",
+       " ('유닛', 0.6111920479598711),\n",
+       " ('음원', 0.6021137226519814)]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "most_similar_words('아이오아이', wv)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('유튜브', 0.33624725785174747),\n",
+       " ('bj', 0.33130966351946567),\n",
+       " ('유투브', 0.3286154529671751),\n",
+       " ('화질', 0.308646021163389),\n",
+       " ('아시아', 0.30832490294227555),\n",
+       " ('철구', 0.3048154094624257),\n",
+       " ('중동', 0.30134489800460185),\n",
+       " ('채널', 0.2938593187909968),\n",
+       " ('들어오면', 0.286887943546003),\n",
+       " ('광고', 0.2860743339772849)]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "most_similar_words('아프리카', wv)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
@@ -526,7 +628,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
