Add multiple document inference

--- a/day4_topicmodeling/day4_2_topic_modeling_with_lda.ipynb
+++ b/day4_topicmodeling/day4_2_topic_modeling_with_lda.ipynb
@@ -736,6 +736,52 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Inference multiple documents"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n",
+      "\n",
+      "[(53, 0.27267325), (61, 0.20199999), (68, 0.33132675)]\n",
+      "\n",
+      "[(9, 0.95960236), (55, 0.027332615)]\n",
+      "\n",
+      "[(4, 0.02323659), (8, 0.030784579), (10, 0.09584675), (19, 0.018741453), (33, 0.6892139), (35, 0.039360102), (82, 0.08731668)]\n",
+      "\n",
+      "[(5, 0.18499), (24, 0.112418726), (36, 0.039512385), (38, 0.12332814), (40, 0.019913077), (41, 0.03821025), (46, 0.085435264), (48, 0.04581695), (53, 0.090820685), (60, 0.018042691), (62, 0.03841084), (68, 0.042952888), (71, 0.038850058), (79, 0.08601888), (97, 0.020872403)]\n",
+      "\n",
+      "[(9, 0.42241076), (55, 0.060224544), (60, 0.110335924), (68, 0.092887454), (92, 0.27095953)]\n",
+      "\n",
+      "[(2, 0.028110694), (4, 0.018938988), (8, 0.029462896), (16, 0.013262627), (18, 0.06726628), (20, 0.018723534), (34, 0.3083522), (36, 0.056936502), (40, 0.069159955), (43, 0.016475484), (47, 0.12019403), (48, 0.017393695), (49, 0.076953314), (71, 0.07622421), (83, 0.032431208), (86, 0.025740739), (97, 0.019053156)]\n",
+      "\n",
+      "[(9, 0.6206872), (16, 0.11922002), (29, 0.15385441), (68, 0.06623844)]\n",
+      "\n",
+      "[(3, 0.098962314), (7, 0.031363517), (8, 0.015603872), (10, 0.06892917), (15, 0.023000628), (33, 0.06292649), (40, 0.021963917), (48, 0.015789138), (54, 0.014281363), (58, 0.42380643), (61, 0.051126074), (70, 0.022138419), (71, 0.058000885), (94, 0.049343962), (97, 0.015496006)]\n",
+      "\n",
+      "[(9, 0.50641567), (22, 0.08056242), (29, 0.1740011), (55, 0.17304572), (68, 0.036287554)]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "y = ldamodel.get_document_topics(corpus)\n",
+    "\n",
+    "for i in range(10):\n",
+    "    print(y[i], end='\\n\\n')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
